--- a/SrikarBiotech/test-output-reports/LoggerReport/dashboard.html
+++ b/SrikarBiotech/test-output-reports/LoggerReport/dashboard.html
@@ -47,6 +47,14 @@
 							</a>
 						</li>
 						<li>
+							<a href="exception.html">
+							<span class="nav-icon">
+							<i class="fa fa-warning"></i>
+							</span>
+							<span class="nav-text">Exceptions</span>
+							</a>
+						</li>
+						<li>
 							<a href="dashboard.html">
 							<span class="nav-icon">
 							<i class="fa fa-dashboard"></i>
@@ -83,7 +91,7 @@
 							<div class="navbar-text nav-title flex" id="pageTitle">Dashboard</div>
 							<ul class="nav nav-xs flex-row no-border pull-right">
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">May 1, 2024 11:12:52 am</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">May 1, 2024 12:37:47 pm</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 							</ul>
 						</div>
@@ -100,8 +108,8 @@
 						1
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 1 passed</span>
-						<span><i class="fa fa-circle-o text-success"></i> 100.00%</span>
+						<span class="flex text-muted">Out of which 0 passed</span>
+						<span><i class="fa fa-circle-o text-success"></i> .00%</span>
 					</div>
 				</div>
 			</div>
@@ -114,8 +122,8 @@
 						1
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 1 passed</span>
-						<span><i class="fa fa-circle-o text-primary"></i> 100.00%</span>
+						<span class="flex text-muted">Out of which 0 passed</span>
+						<span><i class="fa fa-circle-o text-primary"></i> .00%</span>
 					</div>
 				</div>
 			</div>
@@ -125,7 +133,7 @@
 						<span class="">Start</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						May 1, 2024 11:12:52 am
+						May 1, 2024 12:37:47 pm
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -139,7 +147,7 @@
 						<span class="">Time Taken</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						0h 1m 18s+261ms
+						0h 1m 16s+444ms
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -163,14 +171,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-danger"></i> &nbsp;Fail 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">0 passed, 1 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -188,14 +196,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-danger"></i> &nbsp;Fail 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">0 passed, 1 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -213,15 +221,15 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> 100%</div>
-										<div class="list-body"><span class="text-muted">Passed</span></div>
+										<div><i class="badge badge-xs badge-o b-danger"></i> 100%</div>
+										<div class="list-body"><span class="text-muted">Failed</span></div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">24 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">27 passed, 1 failed and 7 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -253,14 +261,14 @@
 						</tr>
 						<tr>
 							<td>@FeatureGroup_Requirement</td>
-							<td>1</td>
 							<td>0</td>
+							<td>1</td>
 							<td>0</td>
 						</tr>
 						<tr>
-							<td>@SBPL_Confirm_Orders1</td>
-							<td>1</td>
+							<td>@SBPL_View_Return_Order1</td>
 							<td>0</td>
+							<td>1</td>
 							<td>0</td>
 						</tr>
 					</table>
@@ -286,7 +294,7 @@
 		                datasets: [{
 		                    borderColor: 'transparent',
 		                    data: [
-		                    	1, 0, 0, 0, 0, 0
+		                    	0, 1, 0, 0, 0, 0
 		                    ],
 		                    backgroundColor: [
 		                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -320,7 +328,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	1, 0, 0, 0, 0, 0
+			                    	0, 1, 0, 0, 0, 0
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -355,7 +363,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	24, 0, 0, 0, 0, 0
+			                    	27, 1, 0, 0, 0, 7
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -383,7 +391,7 @@
 		})();
 	})
     var timeline = {
-"feature to Test the Confirm Orders Screen functionality":71.633    };
+"feature to Test the View Return Order Screen functionality":68.563    };
     function getRandomColor() {
         var letters = '0123456789ABCDEF';
         var color = '#';
