--- a/SrikarBiotech/test-output-reports/LoggerReport/tag.html
+++ b/SrikarBiotech/test-output-reports/LoggerReport/tag.html
@@ -102,12 +102,12 @@
 						<div class="list-body">
 							<a href="#" class="item-title _500">@FeatureGroup_Requirement</a>
 							<div class="item-except text-sm text-muted h-1x">
-								2 tests
+								8 tests
 							</div>
 							<div class="tc d-none">
 								<h5>@FeatureGroup_Requirement</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">1 passed</span>
+									<span class="badge pass text-pass">7 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
@@ -124,8 +124,8 @@
 	
 <tr class="s-pass" test-id="1" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">feature to Test the View Return Order Screen functionality </td>
-	<td>0h 1m 28s+546msc</td>
+	<td class="_600">feature to Test Roles Screen functionality </td>
+	<td>0h 6m 29s+403msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
 		</span>
@@ -137,11 +137,95 @@
 	
 <tr class="s-pass" test-id="2" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Item Partial received functionality <br/><span class="text-muted text-sm">feature to Test the View Return Order Screen functionality</span></td>
-	<td>0h 1m 28s+546msc</td>
+	<td class="_600">Validate login is successful with valid credentials <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 17s+53msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Return_Order1</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="13" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Validate user click on the Roles screen in menu <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 22s+940msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="26" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Validate Add user without enter the data <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 31s+892msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="45" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verify the Add Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 2m 45s+644msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="128" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verification of the Added Role is displayed in the grid <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 38s+421msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="149" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verify the Delete Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 34s+93msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="168" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verify the Update Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 48s+848msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
 		</span>
 </td>
 	<td>
@@ -154,20 +238,20 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">1</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">7</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
 					<div class="list-item attr">
 						<div class="list-body">
-							<a href="#" class="item-title _500">@SBPL_View_Return_Order1</a>
+							<a href="#" class="item-title _500">@Roles</a>
 							<div class="item-except text-sm text-muted h-1x">
-								1 tests
+								7 tests
 							</div>
 							<div class="tc d-none">
-								<h5>@SBPL_View_Return_Order1</h5>
+								<h5>@Roles</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">1 passed</span>
+									<span class="badge pass text-pass">7 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
@@ -184,11 +268,95 @@
 	
 <tr class="s-pass" test-id="2" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Item Partial received functionality <br/><span class="text-muted text-sm">feature to Test the View Return Order Screen functionality</span></td>
-	<td>0h 1m 28s+546msc</td>
+	<td class="_600">Validate login is successful with valid credentials <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 17s+53msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Return_Order1</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="13" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Validate user click on the Roles screen in menu <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 22s+940msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="26" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Validate Add user without enter the data <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 31s+892msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="45" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verify the Add Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 2m 45s+644msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="128" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verification of the Added Role is displayed in the grid <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 38s+421msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="149" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verify the Delete Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 34s+93msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+	
+<tr class="s-pass" test-id="168" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Verify the Update Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 48s+848msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles</span>
 		</span>
 </td>
 	<td>
@@ -201,7 +369,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">1</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">7</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -232,7 +400,7 @@
 									        </a>
 								        </li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">May 1, 2024 03:40:07 pm</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">May 1, 2024 04:41:28 pm</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
