--- a/SrikarBiotech/test-output-reports/LoggerReport/tag.html
+++ b/SrikarBiotech/test-output-reports/LoggerReport/tag.html
@@ -47,6 +47,14 @@
 							</a>
 						</li>
 						<li>
+							<a href="exception.html">
+							<span class="nav-icon">
+							<i class="fa fa-warning"></i>
+							</span>
+							<span class="nav-text">Exceptions</span>
+							</a>
+						</li>
+						<li>
 							<a href="dashboard.html">
 							<span class="nav-icon">
 							<i class="fa fa-dashboard"></i>
@@ -102,13 +110,13 @@
 						<div class="list-body">
 							<a href="#" class="item-title _500">@FeatureGroup_Requirement</a>
 							<div class="item-except text-sm text-muted h-1x">
-								3 tests
+								2 tests
 							</div>
 							<div class="tc d-none">
 								<h5>@FeatureGroup_Requirement</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">2 passed</span>
-									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">1 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
 								<table class="table">
@@ -122,10 +130,10 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="1" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="1" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">feature to Test Roles Screen functionality </td>
-	<td>0h 2m 22s+87msc</td>
+	<td>0h 0m 35s+329msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
 		</span>
@@ -134,33 +142,27 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Add Sales Head Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
-	<td>0h 1m 1s+952msc</td>
+<tr class="s-fail" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
+	<td class="_600">Verify the Pagination functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 35s+329msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles_Pagenation</span>
 		</span>
 </td>
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
-	
-<tr class="s-pass" test-id="29" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Add Sales Person Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
-	<td>0h 1m 14s+54msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
-		</span>
-</td>
-	<td>
+<tr class="details">
+	<td colspan="5">
 	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
 									</tbody>
 								</table>
@@ -168,21 +170,21 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">2</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">1</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
 					<div class="list-item attr">
 						<div class="list-body">
-							<a href="#" class="item-title _500">@Roles1234</a>
+							<a href="#" class="item-title _500">@Roles_Pagenation</a>
 							<div class="item-except text-sm text-muted h-1x">
-								2 tests
+								1 tests
 							</div>
 							<div class="tc d-none">
-								<h5>@Roles1234</h5>
+								<h5>@Roles_Pagenation</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">2 passed</span>
-									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">1 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
 								<table class="table">
@@ -196,32 +198,22 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Add Sales Head Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
-	<td>0h 1m 1s+952msc</td>
+<tr class="s-fail" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
+	<td class="_600">Verify the Pagination functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 0m 35s+329msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles_Pagenation</span>
 		</span>
 </td>
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
-	
-<tr class="s-pass" test-id="29" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Add Sales Person Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
-	<td>0h 1m 14s+54msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
-		</span>
-</td>
-	<td>
+<tr class="details">
+	<td colspan="5">
 	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
 									</tbody>
 								</table>
@@ -229,7 +221,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">2</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">1</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -260,7 +252,7 @@
 									        </a>
 								        </li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">May 14, 2024 05:12:09 pm</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">May 15, 2024 02:16:37 pm</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
